@@ -45,9 +45,9 @@ import static org.junit.Assert.assertEquals;
 
 public class ResourceMapsTest
 {
-	private static final Locale US_LOCALE = new Locale("en", "US");
-	private static final Locale GERMANY_LOCALE = new Locale("de", "DE");
-	private static final  Locale HESSIAN_LOCALE = new Locale("de", "DE", "hessisch");
+	private static final Locale US_LOCALE = Locale.of("en", "US");
+	private static final Locale GERMANY_LOCALE = Locale.of("de", "DE");
+	private static final  Locale HESSIAN_LOCALE = Locale.of("de", "DE", "hessisch");
 	private static Locale prevDefault;
 
 	private void internalGetResourceMap(Class clazz, String resourceBaseName, Locale locale, String[][] expectedResults)
